test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_6/src/main.nr

        fn main(a: u64, b: u64) -> pub u64 {
            main(a + b, main(a, b))
        }
        